# rustegrate

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  azure-deployment-guide.md  docker-compose.yml
.github/workflows/: azure-deploy.yml  ci.yml
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/config/: mod.rs
src/errors/: mod.rs
src/models/: mod.rs  telemetry.rs
src/services/: mod.rs  telemetry.rs
src/storage/: in_memory.rs  mod.rs
telemetry-cli/: Cargo.toml
telemetry-cli/src/: main.rs
tests/: api_integration_test.rs
