[package]
name = "rustegrate"
version = "0.1.0"
edition = "2021"
description = "Rust-based API for Device Telemetry Ingestion & Monitoring"

[dependencies]
# Web framework
actix-web = "4.4"
actix-rt = "2.9"

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Database (optional)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros", "time", "uuid"], optional = true }

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
thiserror = "1.0"

# Configuration
dotenvy = "0.15"
config = "0.13"

# CLI tool dependencies
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[workspace]
members = ["telemetry-cli"]
