[package]
name = "telemetry-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for sending simulated telemetry data to the API"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] } 